--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 
 	<p>Elite Training<br />
 	<p>2123 Success Blvd &bull; Myrtle Beach, SC 29577<br />
-	<p><a href = "https://facebook.com" target="-blank">Facebook</a> | <a href = "https://instagram.com" target="-blank">Instagram</a> |<a href = "tel:+8438032107" target="(843)-8032107">Telephone</a> | <a href = "elite1training0@gmail.com" target="-blank">Email</a></p>
+	<p><a href = "https://facebook.com" target="-blank">Facebook</a> | <a href = "https://instagram.com" target="-blank">Instagram</a> |<a href = "tel:+8438032107" target="(843)-8032107">Telephone</a> | <a href="mailto:elite1training0@gmail.com" target="-blank">Email</a></p>
 
 </footer>  
 </div> <!-- end wrapper --> 
