--- a/about.html
+++ b/about.html
@@ -58,11 +58,11 @@
 
 <h3>What Sets Us Apart</h3>
 
-	<li> Friendly Staff </p>
-	<li> More than a basketball program but rather a family. </li>
-	<li> Improves young athletes on and off the court. </li>
-	<li> Attention to detail and doing things the right way. </li>
-	<li> Pushes athletes to be the best version of themselves. </li>
+	<p>Friendly Staff</p>
+	<p> More than a basketball program but rather a family. </p>
+	<p> Improves young athletes on and off the court. </p>
+	<p> Attention to detail and doing things the right way. </p>
+	<p> Pushes athletes to be the best version of themselves. </p>
 	
 
 
