--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 
 <p>Elite Training<br />
 	2123 Success Blvd &bull; Myrtle Beach, SC 29577<br />
-	<a href = "https://facebook.com" target="-blank">Facebook</a> | <a href = "https://instagram.com" target="-blank">Instagram</a> |<a href= "tel:+8438032107" target="(843)-8032107">Telephone</a> | <a href="mailto:elite1training0@gmail.com" target="-blank">Email</a></p>
+	<a href = "https://facebook.com">Facebook</a> | <a href = "https://instagram.com">Instagram</a> |<a href= "tel:+8438032107">Telephone</a> | <a href="mailto:elite1training0@gmail.com">Email</a></p>
 
 </footer>  
 
