--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h2>Elevate Your Game</h2>
 	<p> This program will help basketball players take their skill to the next level.  Elite Training is not an easy program to be apart of. Athletes will be pushed to work hard and come to training sessions ready to work. </p>
 
-<iframe width="450" height="315" src="https://www.youtube.com/embed/asr1iJIxx-Q?si=nogHF7jghvoWvwV6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="450" height="315" src="https://www.youtube.com/embed/asr1iJIxx-Q?si=nogHF7jghvoWvwV6" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	
 <h3>Training Sessions</h3>
 	<p> Training sessions will be depended on the time you book. Athletes are expected to show up early and be ready to start right on time. The training sessions will push athletes to work hard and will help them develop skills that should be improved or not quite ready for the next level. </p>
