--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,8 @@
 			</div>
 		<div id="buttons">
 			<input type="Submit" value="Submit my Information" >
-				<input type="Cancel" value="Cancel" >
+				<input type="reset" value="Cancel" >
+		</div>
 			</form>
 </fieldset>
 	
