--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 <article id = "main"> 
 <h2>Contact Us</h2>
 	<p>Feel free to get in touch of with us about any questions, comments or concerns you may have. Email is the best option get in contact with us. The best times to contact us our when we are open otherwise you won't get back to you until the next day. You can see our hours in the column to the right. </p>
-<form id="survey" action="http://www.example.com/redball/survey" method="post">
+<form id="survey" action="http://www.example.com/redball/survey" method="post"></form>
     	<fieldset id="custInfo"> 
     		<legend>Customer Information</legend>
     			<div class="formRow">
@@ -57,7 +57,7 @@
 			<input type="Submit" value="Submit my Information" >
 				<input type="reset" value="Cancel" >
 		</div>
-			</form>
+			
 </fieldset>
 	
 
