--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 <h2>Contact Us</h2>
 	<p>Feel free to get in touch of with us about any questions, comments or concerns you may have. Email is the best option get in contact with us. The best times to contact us our when we are open otherwise you won't get back to you until the next day. You can see our hours in the column to the right. </p>
 <form id="survey" action="http://www.example.com/redball/survey" method="post">
-    	<fieldset id="custInfo"> </fieldset>
+    	<fieldset id="custInfo"> 
     		<legend class ="survey">Customer Information</legend>
     			<div class="formRow">
     			<label for="name">Name*</label>
@@ -58,7 +58,7 @@
 				<input type="reset" value="Cancel" >
 		</div>
 </form>	
-
+</fieldset>
 	
 
 </article> <!-- end main -->
