--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -20,7 +20,7 @@
 <body>
 
 <div id = "container"> 
-
+</div>
 <header> 
 
 <a href="index.html"><img src="ETlogo.png" alt="Elite Training Logo"/></a>
@@ -94,7 +94,7 @@
 		
 		 <h3> Booking A Session </h3>
      <p> To schedule a training session please fill out the form below. Once the form is completed we will get back to as soon as possible with what slots we have available. </p>
-<form id="survey" action="http://www.example.com/redball/survey" method="post" />
+<form id="survey" action="http://www.example.com/redball/survey" method="post" >
     	<fieldset id="custInfo">
     		<legend>Customer Information</legend>
     			<div class="formRow">
@@ -134,6 +134,7 @@
     			
 	
 	</fieldset>
+	</form>
 	</section>
 
 
