--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -19,7 +19,7 @@
 
 <body>
 
-<div id = "container"> 
+<div id = "container" ></div>
 
 <header> 
 
@@ -131,8 +131,6 @@
     			<label for="mail">E-mail*</label>
     			<input name="custEmail" id="mail" type="email" />
     			</div>
-    			
-
 	</fieldset>
 	</form>
 	</section>
