--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -19,7 +19,7 @@
 
 <body>
 
-<div id = "container" ></div>
+<div id = "container" >
 
 <header> 
 
@@ -29,7 +29,7 @@
 
 
 	<div id = "wrapper">
-		 
+	</div>	 
 <nav>  
 	<ul>
 	  <li><a href = "index.html">Home</a></li>
